# doommaschine

./: .gitignore  README.md
doomgeneric/: Makefile.doommaschine  i_sound.c
doommaschine-rs/: Cargo.toml
doommaschine-rs/src/: image_utils.rs  keys.rs  lib.rs
